api angular mod tasks

--- a/src/app/task-detail/task-detail.component.html
+++ b/src/app/task-detail/task-detail.component.html
@@ -1,3 +1,21 @@
-<p>
-  task-detail works!
-</p>
+<form *ngIf="task">
+    <div class="form-row">
+        <div class="col-md-5">
+            <input type="text" name="username" id="username" [(ngModel)]="task.username" placeholder="Username" class="form-control">
+          </div>
+          <div class="col-md-5">
+            <input type="text" name="first_name" id="first_name" [(ngModel)]="task.first_name" placeholder="First name" class="form-control">
+          </div>
+          <div class="col-md-5">
+            <input type="text" name="last_name" id="last_name" [(ngModel)]="task.last_name" placeholder="Last name" class="form-control">
+          </div>
+          <div class="col-md-2">
+            <button type="submit" class="btn btn-primary" (click)="updateUser()">Actualizar</button>
+          </div>
+          <div class="col-md-2">
+              <button type="submit" class="btn btn-primary" (click)="deleteUser()">Eliminar</button>
+            </div>
+        </div>
+    
+
+</form>
